[package]
name = "piz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
mupdf = "0.4.1"
winit = "0.26"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
image = "0.24"
bytemuck = { version = "1.4", features = [ "derive" ] }
