[package]
name = "piz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
tracing = "0.1"
tracing-subscriber = "0.2"
mupdf = { version = "0.4", default-features = false }
wgpu = "0.13"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
egui-wgpu = "0.19"
egui = "0.19"
egui-winit = "0.19"
webbrowser = "0.8"
sqlite = "0.27"
